Work towards CI/CD integration

--- a/tutorials/2-01-external_mesh_CGNS_sphere/parameter.ini
+++ b/tutorials/2-01-external_mesh_CGNS_sphere/parameter.ini
@@ -1,20 +1,20 @@
 !=============================================================================== !
 ! OUTPUT
 !=============================================================================== !
-projectname        = 2-01-external_mesh_CGNS_sphere ! name of the project (used for filenames)
-Debugvisu          = T                              ! launch the GMSH GUI to visualize the mesh
-outputFormat       = HDF5
-checkElemJacobians = T                              ! checks the Jacobian and scaled Jacobian for each element
+projectname  = 2-01-external_mesh_CGNS_sphere       ! Name of output files
+Debugvisu    = F                                    ! Launch the GMSH GUI to visualize the mesh
+outputFormat = HDF5                                 ! Mesh output format (HDF5 VTK)
+checkElemJacobians = T                              ! Checks (scaled) Jacobian
 
 !=============================================================================== !
 ! MESH
 !=============================================================================== !
-Mode      = 3                                       ! 1 Cartesian 3 External
-nZones    = 3                                       ! number of zones
-! filename  = spheremesh01.cgns                       ! name of mesh file
-filename  = spheremesh02.cgns                       ! name of mesh file
-! filename  = spheremesh04.cgns                       ! name of mesh file
-meshscale = 0.001                                   ! scales all input meshes by a factor
+Mode         = 3                                    ! 1 Cartesian 3 External
+nZones       = 3                                    ! Number of zones
+! FileName     = spheremesh01.cgns                    ! Name of mesh file
+FileName     = spheremesh02.cgns                    ! Name of mesh file
+! FileName     = spheremesh04.cgns                    ! Name of mesh file
+MeshScale    = 0.001                                ! Scale all input meshes by factor
 
 !=============================================================================== !
 ! BOUNDARY CONDITIONS
