--- a/tutorials/1-03-cartbox_multiple/parameter.ini
+++ b/tutorials/1-03-cartbox_multiple/parameter.ini
@@ -1,21 +1,22 @@
 !================================================================================================================================= !
 ! OUTPUT
 !================================================================================================================================= !
-ProjectName  = 1-03-cartbox_multiple      ! Name of output files
-Debugvisu    = T                          ! Write files for Visualization of the mesh and boundary conditions (tecplot ascii)
+ProjectName  = 1-03-cartbox_multiple                ! Name of output files
+Debugvisu    = F                                    ! Launch the GMSH GUI to visualize the mesh
+outputFormat = HDF5                                 ! Mesh output format (HDF5 VTK)
 
 !================================================================================================================================= !
 ! MESH
 !================================================================================================================================= !
-Mode         = 1                          ! Mode for Cartesian boxes
-nZones       = 3                          ! number of boxes
+Mode         = 1                                    ! Mode for Cartesian boxes
+nZones       = 3                                    ! Number of boxes
 
 ! ===   lower left zone  ===
 Corner       = (/-2.,0.,-1. ,,0.,0.,-1. ,,0.,2.,-1. ,,-2.,2.,-1. ,,-2.,0.,0. ,,0.,0.,0. ,,0.,2.,0. ,,-2.,2.,0/)
-                                          ! Corner node positions: (/ x_1,y_1,z_1, x_2,y_2,z_2,..... , x_8,y_8,z_8/)
-nElems       = (/4,4,2/)                  ! number of elements in each direction
-BCIndex      = (/1,6,3,7,4,0/)            ! Indices of Boundary Conditions for  six Boundary Faces (z-,y-,x+,y+,x-,z+)
-elemtype     = 108                        ! element type (104: Tetrahedra, 105: pyramid, 106:prism, 108: Hexahedral)
+                                                    ! Corner node positions: (/ x_1,y_1,z_1, x_2,y_2,z_2,..... , x_8,y_8,z_8/)
+nElems       = (/4,4,2/)                            ! Number of elements in each direction
+BCIndex      = (/1,6,3,7,4,0/)                      ! Indices of Boundary Conditions for  six Boundary Faces (z-,y-,x+,y+,x-,z+)
+elemtype     = 108                                  ! Element type (108: Hexahedral)
 
 ! ===   upper left zone  ===
 Corner       = (/-2.,0.,0. ,,0.,0.,0. ,,0.,2.,0. ,,-2.,2.,0. ,,-2.,0.,1. ,,0.,0.,1. ,,0.,2.,1. ,,-2.,2.,1/)
@@ -32,18 +33,18 @@ elemtype     = 108
 !================================================================================================================================= !
 ! BOUNDARY CONDITIONS
 !================================================================================================================================= !
-BoundaryName = BC_slipwall                ! BC index 1 (from  position in parameterfile)
-BoundaryType = (/4,0,0,0/)                ! (/ Type, curveIndex, State, alpha /)
-BoundaryName = BC_upperwall               ! BC index 2
-BoundaryType = (/4,0,0,0/)                ! (/ Type, curveIndex, State, alpha /)
-BoundaryName = BC_lowerwall               ! BC index 3
-BoundaryType = (/4,0,0,0/)                ! (/ Type, curveIndex, State, alpha /)
-BoundaryName = BC_inflow                  ! BC index 4
-BoundaryType = (/2,0,0,0/)                ! (/ Type, curveIndex, State, alpha /)
-BoundaryName = BC_outflow                 ! BC index 5
-BoundaryType = (/2,0,0,0/)                ! (/ Type, curveIndex, State, alpha /)
-BoundaryName = BC_yminus                  ! BC index 6
-BoundaryType = (/1,0,0,1/)                ! (/ Type, curveIndex, State, alpha /)
-BoundaryName = BC_yplus                   ! BC index 7
-BoundaryType = (/1,0,0,-1/)               ! (/ Type, curveIndex, State, alpha /)
-vv = (/0.,2.,0./)                         ! vector for periodic BC
+BoundaryName = BC_slipwall                          ! BC index 1 (from  position in parameterfile)
+BoundaryType = (/4,0,0,0/)                          ! (/ Type, curveIndex, State, alpha /)
+BoundaryName = BC_upperwall                         ! BC index 2
+BoundaryType = (/4,0,0,0/)                          ! (/ Type, curveIndex, State, alpha /)
+BoundaryName = BC_lowerwall                         ! BC index 3
+BoundaryType = (/4,0,0,0/)                          ! (/ Type, curveIndex, State, alpha /)
+BoundaryName = BC_inflow                            ! BC index 4
+BoundaryType = (/2,0,0,0/)                          ! (/ Type, curveIndex, State, alpha /)
+BoundaryName = BC_outflow                           ! BC index 5
+BoundaryType = (/2,0,0,0/)                          ! (/ Type, curveIndex, State, alpha /)
+BoundaryName = BC_yminus                            ! BC index 6
+BoundaryType = (/1,0,0,1/)                          ! (/ Type, curveIndex, State, alpha /)
+BoundaryName = BC_yplus                             ! BC index 7
+BoundaryType = (/1,0,0,-1/)                         ! (/ Type, curveIndex, State, alpha /)
+vv = (/0.,2.,0./)                                   ! Vector for periodic BC
