Switch to ruff instead of flake8 as static analyzer/linter

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -82,13 +82,13 @@ stages:
 # ----------------------------------------------------------------------------------------------------------------------------------------------------
 # Linter
 # ----------------------------------------------------------------------------------------------------------------------------------------------------
-flake8:
+ruff:
   extends: .defaults
   stage: lint
   script:
-    - python3 -m pip install flake8
-    - flake8 --version
-    - flake8 --extend-ignore=E201,E202,E203,E221,E222,E225,E231,E271,E272 --max-line-length=132 --statistics --show-source --verbose uvwxyz.py src/
+    - python3 -m pip install ruff
+    - ruff --version
+    - ruff check --extend-ignore=E201,E202,E203,E221,E222,E225,E231,E271,E272 --line-length=132 --preview uvwxyz.py src/
 
 # ----------------------------------------------------------------------------------------------------------------------------------------------------
 # Reggie
