--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "src"    # Just to avoid having to rename all intra-package imports
-version = "2.0.0"
+version = "0.9.0"
 authors = [
 	"XXX"
 ]
@@ -12,7 +12,7 @@ description = "A python-based HOPR clone for High-Order mesh generation"
 license = "GPL-3.0"
 readme = "README.md"
 repository = "https://gitlab.iag.uni-stuttgart.de/flexi/codes/pyhope"
-keywords = ["hoppy", "something"]
+keywords = ["PyHOPE", "something"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
@@ -34,4 +34,4 @@ gmsh = { url = "https://gitlab.iag.uni-stuttgart.de/libs/python-gmsh/-/raw/maste
 
 [tool.poetry.scripts]
 # Establishes the entry point for the CLI
-hoppy = "src.pyhope:main"
+pyhope = "src.pyhope:main"
