--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,16 +3,16 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
-name = "src"    # Just to avoid having to rename all intra-package imports
-version = "0.9.0"
+name = "PyHOPE"
 authors = [
-	"XXX"
+    "Numerics Research Group (NRG) <numerics@iag.uni-stuttgart.de>",
 ]
-description = "A python-based HOPR clone for High-Order mesh generation"
+version = "0.0.1"
+description = "Coming soon"
 license = "GPL-3.0"
 readme = "README.md"
 repository = "https://gitlab.iag.uni-stuttgart.de/flexi/codes/pyhope"
-keywords = ["PyHOPE", "something"]
+keywords = ["PyHOPE", "mesh generator"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
@@ -34,4 +34,4 @@ gmsh = { url = "https://gitlab.iag.uni-stuttgart.de/libs/python-gmsh/-/raw/maste
 
 [tool.poetry.scripts]
 # Establishes the entry point for the CLI
-pyhope = "src.pyhope:main"
+pyhope = "pyhope.pyhope:main"
