--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ packaging = "*"
 plotext = "*"
 pygmsh = "*"
 scipy = "*"
-gmsh = { url = "https://gitlab.iag.uni-stuttgart.de/libs/python-gmsh/-/raw/master/gmsh-4.13.1-py3-none-linux_x86_64.whl" }
+gmsh = "*"
 
 [tool.poetry.scripts]
 # Establishes the entry point for the CLI
