Refactor external CGNS BCs

--- a/tutorials/1-03-cartbox_multiple/parameter.ini
+++ b/tutorials/1-03-cartbox_multiple/parameter.ini
@@ -3,7 +3,9 @@
 !================================================================================================================================= !
 ProjectName  = 1-03-cartbox_multiple                ! Name of output files
 Debugvisu    = F                                    ! Launch the GMSH GUI to visualize the mesh
-outputFormat = HDF5                                 ! Mesh output format (HDF5 VTK)
+OutputFormat = HDF5                                 ! Mesh output format (HDF5 VTK)
+checkElemJacobians = T                              ! Checks (scaled) Jacobian
+nThreads     = 4                                    ! Number of threads for multiprocessing
 
 !================================================================================================================================= !
 ! MESH
