--- a/tutorials/2-06-external_mesh_Gmsh_v4_3D/parameter.ini
+++ b/tutorials/2-06-external_mesh_Gmsh_v4_3D/parameter.ini
@@ -3,7 +3,8 @@
 !=============================================================================== !
 ProjectName  = 2-06-external_mesh_Gmsh_v4_3D        ! Name of output files
 Debugvisu    = F                                    ! Launch the GMSH GUI to visualize the mesh
-outputFormat = HDF5                                 ! Mesh output format (HDF5 VTK)
+OutputFormat = HDF5                                 ! Mesh output format (HDF5 VTK)
+checkElemJacobians = T                              ! Checks (scaled) Jacobian
 nThreads     = 4                                    ! Number of threads for multiprocessing
 
 !=============================================================================== !
