--- a/tutorials/2-01-external_mesh_CGNS_sphere/parameter.ini
+++ b/tutorials/2-01-external_mesh_CGNS_sphere/parameter.ini
@@ -1,10 +1,11 @@
 !=============================================================================== !
 ! OUTPUT
 !=============================================================================== !
-projectname  = 2-01-external_mesh_CGNS_sphere       ! Name of output files
+ProjectName  = 2-01-external_mesh_CGNS_sphere       ! Name of output files
 Debugvisu    = F                                    ! Launch the GMSH GUI to visualize the mesh
-outputFormat = HDF5                                 ! Mesh output format (HDF5 VTK)
+OutputFormat = HDF5                                 ! Mesh output format (HDF5 VTK)
 checkElemJacobians = T                              ! Checks (scaled) Jacobian
+nThreads     = 4                                    ! Number of threads for multiprocessing
 
 !=============================================================================== !
 ! MESH
