Add abort on (currently) unsupported CGNS PointList

--- a/tutorials/3-01-agglomeration_CGNS_NACA/parameter.ini
+++ b/tutorials/3-01-agglomeration_CGNS_NACA/parameter.ini
@@ -11,7 +11,7 @@ nThreads     = 4                                    ! Number of threads for mult
 !=============================================================================== !
 FileName     = 3-01-agglomeration_CGNS_NACA.cgns    ! Name of mesh file
 Mode         = 3                                    ! 1 Cartesian 3 External
-MeshScale    = 0.001                                ! Scale all input meshes by factor
+! MeshScale    = 0.001                                ! Scale all input meshes by factor
 
 !=============================================================================== !
 ! CURVING BY AGGLOMERATION
@@ -26,7 +26,7 @@ BoundaryOrder       = 5                             ! 3: agglomerate 2x2x2 linea
 ! BOUNDARY CONDITIONS
 !=============================================================================== !
 BoundaryName = BC_OUTFLOW                           ! BC index 1 (from  position in parameterfile)
-BoundaryType = (/2,1,0,0/)                          ! (/ Type, curveIndex, State, alpha /)
+BoundaryType = (/2,1,0,0/)                          ! (/ Type, CurveIndex, State, Alpha /)
 BoundaryName = BC_INFLOW                            ! BC index 2
 BoundaryType = (/2,0,1,0/)
 BoundaryName = BC_WALL                              ! BC index 3
