--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
     "Numerics Research Group (NRG) <numerics@iag.uni-stuttgart.de>",
 ]
 version = "0.0.3"
-description = "Coming soon"
+description = "Python High-Order Preprocessing Environment"
 license = "GPL-3.0"
 readme = "README.md"
 repository = "https://gitlab.iag.uni-stuttgart.de/flexi/codes/pyhope"
