Initial definition of ElemType in mesh format primitives

--- a/tutorials/1-03-cartbox_multiple/parameter.ini
+++ b/tutorials/1-03-cartbox_multiple/parameter.ini
@@ -18,19 +18,19 @@ Corner       = (/-2.,0.,-1. ,,0.,0.,-1. ,,0.,2.,-1. ,,-2.,2.,-1. ,,-2.,0.,0. ,,0
                                                     ! Corner node positions: (/ x_1,y_1,z_1, x_2,y_2,z_2,..... , x_8,y_8,z_8/)
 nElems       = (/4,4,2/)                            ! Number of elements in each direction
 BCIndex      = (/1,6,3,7,4,0/)                      ! Indices of Boundary Conditions for  six Boundary Faces (z-,y-,x+,y+,x-,z+)
-elemtype     = 108                                  ! Element type (108: Hexahedral)
+ElemType     = 108                                  ! Element type (108: Hexahedral)
 
 ! ===   upper left zone  ===
 Corner       = (/-2.,0.,0. ,,0.,0.,0. ,,0.,2.,0. ,,-2.,2.,0. ,,-2.,0.,1. ,,0.,0.,1. ,,0.,2.,1. ,,-2.,2.,1/)
 nElems       = (/4,4,2/)
 BCIndex      = (/0,6,0,7,4,2/)
-elemtype     = 108
+ElemType     = 108
 
 ! ===   upper right zone  ===
 Corner       = (/0.,0.,0. ,, 5.,0.,0. ,, 5.,2.,0. ,, 0.,2.,0.,, 0.,0.,1. ,, 5.,0.,1. ,, 5.,2.,1. ,, 0.,2.,1. /)
 nElems       = (/10,4,2/)
 BCIndex      = (/3,6,5,7,0,2/)
-elemtype     = 108
+ElemType     = 108
 
 !================================================================================================================================= !
 ! BOUNDARY CONDITIONS
