--- a/tutorials/5-02-convtest_flipped/parameter_FLIPPED_template_hopr.ini
+++ b/tutorials/5-02-convtest_flipped/parameter_FLIPPED_template_hopr.ini
@@ -1,7 +1,7 @@
 !================================================================================================================================= !
 ! OUTPUT
 !================================================================================================================================= !
-ProjectName  = 5-02-convtest_flipped_008            ! Name of output files
+ProjectName  = CART_HEX_PERIODIC_<nElem>            ! Name of output files
 Debugvisu    = F                                    ! Launch the GMSH GUI to visualize the mesh
 OutputFormat = 0                                    ! Mesh output format (HDF5 VTK)
 checkElemJacobians = T                              ! Checks (scaled) Jacobian
@@ -17,13 +17,13 @@ doSortIJK    = T                                    ! Sort the mesh elements alo
 ! ===  left zone  ===
 Corner       = (/-1,-1,-1   ,,0,-1,-1   ,,0,1,-1    ,,-1,1,-1    ,,-1,-1,1   ,,0,-1,1   ,,0,1,1    ,,-1,1,1/)
                                                     ! Corner node positions: (/ x_1,y_1,z_1, x_2,y_2,z_2,..... , x_8,y_8,z_8/)
-nElems       = (/4,8,8/)                            ! Number of elements in each direction
+nElems       = (/<nElem2>,<nElem>,<nElem>/)         ! Number of elements in each direction
 BCIndex      = (/1,2,7,4,5,6/)                      ! Indices of Boundary Conditions for six Boundary Faces (z-,y-,x+,y+,x-,z+)
 ElemType     = 108                                  ! Element type (108: Hexahedral)
 
 ! === right zone  ===
 Corner       = (/0,-1,1     ,,1,-1,1    ,,1,1,1     ,,0,1,1      ,,0,-1,-1   ,,1,-1,-1  ,,1,1,-1   ,,0,1,-1/)
-nElems       = (/4,8,8/)                            ! Number of elements in each direction
+nElems       = (/<nElem2>,<nElem>,<nElem>/)         ! Number of elements in each direction
 BCIndex      = (/6,2,3,4,7,1/)                      ! Indices of Boundary Conditions for six Boundary Faces (z-,y-,x+,y+,x-,z+)
 ElemType     = 108                                  ! Element type (108: Hexahedral)
 
