--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -236,7 +236,7 @@ convergence:
     - | # Literal YAML multiline block scalar indicator
       if command -v apt-get >/dev/null 2>&1; then
         apt-get update
-        apt-get install -y git cmake-extras cmake-curses-gui g++ gfortran mpi-default-dev zlib1g-dev libopenblas-dev libhdf5-mpi-dev
+        apt-get install -y git cmake-extras g++ gfortran mpi-default-dev zlib1g-dev libopenblas-dev libhdf5-mpi-dev
         apt-get install -y python3 python3-pip python3-venv
         apt-get install -y libxft2 libxext6
       fi
@@ -244,7 +244,7 @@ convergence:
     - *global-before-script
     # Install FLEXI
     - rm -rf flexi || true
-    - git clone https://github.com/flexi-framework/flexi.git
+    - git clone --branch master --single-branch --depth 1 https://github.com/flexi-framework/flexi.git
     - cd flexi
     - cmake -B build
     - cmake --build build
