--- a/tutorials/1-09-cartbox_nonconforming/parameter.ini
+++ b/tutorials/1-09-cartbox_nonconforming/parameter.ini
@@ -13,21 +13,21 @@ nThreads     = 4                                    ! Number of threads for mult
 Mode         = 1                          ! Mode for Cartesian boxes
 nZones       = 3                          ! Number of boxes
 
-! ===   lower left zone  ===
+! ===         left zone  ===
 Corner       = (/-1.,-1.,-1. ,,0.,-1.,-1. ,,0.,1.,-1. ,,  -1.,1.,-1.,, -1.,-1.,1. ,,0.,-1.,1. ,,0.,1.,1. ,,  -1.,1.,1. /)
                                           ! Corner node positions: (/ x_1,y_1,z_1, x_2,y_2,z_2,..... , x_8,y_8,z_8/)
 nElems       = (/1,1,1/)                  ! Number of elements in each direction
 BCIndex      = (/1,3,0,4,5,2/)            ! Indices of Boundary Conditions for  six Boundary Faces (z-,y-,x+,y+,x-,z+)
 ElemType     = 108                        ! Element type (104: Tetrahedra, 105: Pyramid, 106: Prism, 108: Hexahedral)
 
-! ===   upper left zone  ===
+! ===   upper right zone ===
 Corner       = (/0.,-1.,-1. ,,1.,-1.,-1. ,,1.,0.,-1. ,,  0.,0.,-1.,, 0.,-1.,1. ,,1.,-1.,1. ,,1.,0.,1. ,,  0.,0.,1. /)
                                           ! Corner node positions: (/ x_1,y_1,z_1, x_2,y_2,z_2,..... , x_8,y_8,z_8/)
 nElems       = (/2,1,1/)                  ! Number of elements in each direction
 BCIndex      = (/1,1,1,0,0,2/)            ! Indices of Boundary Conditions for  six Boundary Faces (z-,y-,x+,y+,x-,z+)
 ElemType     = 108                        ! Element type (104: Tetrahedra, 105: Pyramid, 106: Prism, 108: Hexahedral)lementform (104: Tetrahedra, 105: pyramid, 106:prism, 108: Hexahedral)
 
-! ===   upper right zone  ===
+! ===   upper right zone ===
 Corner       = (/0.,0.,-1. ,,1.,0.,-1. ,,1.,1.,-1. ,,  0.,1.,-1.,, 0.,0.,1. ,,1.,0.,1. ,,1.,1.,1. ,,  0.,1.,1. /)
                                           ! Corner node positions: (/ x_1,y_1,z_1, x_2,y_2,z_2,..... , x_8,y_8,z_8/)
 nElems       = (/1,1,1/)                  ! Number of elements in each direction
