Minor fixes for BC sides

--- a/tutorials/2-01-external_mesh_CGNS_sphere/parameter.ini
+++ b/tutorials/2-01-external_mesh_CGNS_sphere/parameter.ini
@@ -20,11 +20,11 @@ MeshScale    = 0.001                                ! Scale all input meshes by 
 !=============================================================================== !
 ! BOUNDARY CONDITIONS
 !=============================================================================== !
-BoundaryName = sphere                               ! the bc_name must be defined in mesh file
-BoundaryType = (/4,1,0,0/)
-BoundaryName = inflow                               ! the bc_name must be defined in mesh file
+BoundaryName = sphere                               ! BC index 1 (from position in parameterfile)
+BoundaryType = (/4,1,0,0/)                          ! (/ Type, curveIndex, State, alpha /)
+BoundaryName = inflow                               ! BC index 2
 BoundaryType = (/2,0,0,0/)
-BoundaryName = outflow                              ! the bc_name must be defined in mesh file
+BoundaryName = outflow                              ! BC index 3
 BoundaryType = (/2,0,0,0/)
-BoundaryName = mantel                               ! the bc_name must be defined in mesh file
+BoundaryName = mantel                               ! BC index 4
 BoundaryType = (/2,0,0,0/)
