--- a/tutorials/3-01-agglomeration_CGNS_NACA/parameter.ini
+++ b/tutorials/3-01-agglomeration_CGNS_NACA/parameter.ini
@@ -21,11 +21,12 @@ NGeo                = 4                             ! 2: agglomerate 2x2x2 linea
                                                     ! 4: agglomerate 4x4x4 linear elements to 1 curved element
 BoundaryOrder       = 5                             ! 3: agglomerate 2x2x2 linear elements to 1 curved element (legacy)
                                                     ! 5: agglomerate 4x4x4 linear elements to 1 curved element (legacy)
+doPeriodicCorrect   = T                             ! Enable periodicity correction
 
 !=============================================================================== !
 ! BOUNDARY CONDITIONS
 !=============================================================================== !
-BoundaryName = BC_OUTFLOW                           ! BC index 1 (from  position in parameterfile)
+BoundaryName = BC_OUTFLOW                           ! BC index 1 (from position in parameterfile)
 BoundaryType = (/2,1,0,0/)                          ! (/ Type, CurveIndex, State, Alpha /)
 BoundaryName = BC_INFLOW                            ! BC index 2
 BoundaryType = (/2,0,1,0/)
@@ -36,7 +37,7 @@ BoundaryType = (/1,0,0,1/)
 BoundaryName = BC_ZPLUS                             ! BC index 5
 BoundaryType = (/1,0,0,-1/)
 ! vv = (/0.,0.,1./)                                   ! Vector for periodic BC
-vv = (/0.,0.,1000./)                                   ! Vector for periodic BC
+vv = (/0.,0.,1000./)                                ! Vector for periodic BC
 
 BoundaryName = DEFAULT                              ! BC index 6
 BoundaryType = (/0,0,0,0/)
