--- a/tutorials/5-02-convtest_flipped/parameter_template_pyhope.ini
+++ b/tutorials/5-02-convtest_flipped/parameter_template_pyhope.ini
@@ -18,13 +18,13 @@ doSortIJK    = T                                    ! Sort the mesh elements alo
 Corner       = (/-1,-1,-1   ,,0,-1,-1   ,,0,1,-1    ,,-1,1,-1    ,,-1,-1,1   ,,0,-1,1   ,,0,1,1    ,,-1,1,1/)
                                                     ! Corner node positions: (/ x_1,y_1,z_1, x_2,y_2,z_2,..... , x_8,y_8,z_8/)
 nElems       = (/<nElem2>,<nElem>,<nElem>/)         ! Number of elements in each direction
-BCIndex      = (/1,2,7,4,5,6/)                      ! Indices of Boundary Conditions for six Boundary Faces (z-,y-,x+,y+,x-,z+)
+BCIndex      = (/1,2,0,4,5,6/)                      ! Indices of Boundary Conditions for six Boundary Faces (z-,y-,x+,y+,x-,z+)
 ElemType     = 108                                  ! Element type (108: Hexahedral)
 
 ! === right zone  ===
 Corner       = (/0,-1,1     ,,1,-1,1    ,,1,1,1     ,,0,1,1      ,,0,-1,-1   ,,1,-1,-1  ,,1,1,-1   ,,0,1,-1/)
 nElems       = (/<nElem2>,<nElem>,<nElem>/)         ! Number of elements in each direction
-BCIndex      = (/6,2,3,4,7,1/)                      ! Indices of Boundary Conditions for six Boundary Faces (z-,y-,x+,y+,x-,z+)
+BCIndex      = (/6,2,3,4,0,1/)                      ! Indices of Boundary Conditions for six Boundary Faces (z-,y-,x+,y+,x-,z+)
 ElemType     = 108                                  ! Element type (108: Hexahedral)
 
 !================================================================================================================================= !
@@ -33,17 +33,15 @@ ElemType     = 108                                  ! Element type (108: Hexahed
 BoundaryName = BC_z-                               ! BCindex 1 (from position in parameterfile)
 BoundaryType = (/1,0,0,3/)                         ! (/ Type, curveIndex, State, alpha /)
 BoundaryName = BC_y-                               ! BC index 2
-BoundaryType = (/1,0,0,2/)                         ! (/ Type, curveIndex, State, alpha /)
+BoundaryType = (/1,0,0,2/)
 BoundaryName = BC_x+                               ! BC index 3
-BoundaryType = (/1,0,0,-1/)                        ! (/ Type, curveIndex, State, alpha /)
+BoundaryType = (/1,0,0,-1/)
 BoundaryName = BC_y+                               ! BC index 4
-BoundaryType = (/1,0,0,-2/)                        ! (/ Type, curveIndex, State, alpha /)
+BoundaryType = (/1,0,0,-2/)
 BoundaryName = BC_x-                               ! BC index 5
-BoundaryType = (/1,0,0,1/)                         ! (/ Type, curveIndex, State, alpha /)
+BoundaryType = (/1,0,0,1/)
 BoundaryName = BC_z+                               ! BC index 6
-BoundaryType = (/1,0,0,-3/)                        ! (/ Type, curveIndex, State, alpha /)
-BoundaryName = inner                               ! BC index 7
-BoundaryType = (/0,0,0,0/)                         ! (/ Type, curveIndex, State, alpha /)
+BoundaryType = (/1,0,0,-3/)
 vv = (/2.,0.,0./)                                  ! Vector for periodic BC
 vv = (/0.,2.,0./)                                  ! Vector for periodic BC
 vv = (/0.,0.,2./)                                  ! Vector for periodic BC
