--- a/tutorials/5-03-convtest_mortar/parameter.ini
+++ b/tutorials/5-03-convtest_mortar/parameter.ini
@@ -3,7 +3,7 @@
 !================================================================================================================================= !
 ProjectName  = 5-03-convtest_mortar                 ! Name of output files
 Debugvisu    = F                                    ! Launch the GMSH GUI to visualize the mesh
-OutputFormat = 0                                    ! Mesh output format (HDF5 VTK)
+OutputFormat = HDF5                                 ! Mesh output format (HDF5 VTK)
 checkElemJacobians = T                              ! Checks (scaled) Jacobian
 nThreads     = 4                                    ! Number of threads for multiprocessing
 
