--- a/.docker/fedora_41/dockerfile
+++ b/.docker/fedora_41/dockerfile
@@ -5,12 +5,14 @@ FROM fedora:41
 LABEL maintainer="numerics@iag.uni-stuttgart.de"
 
 # Setup required packages
-RUN dnf makecache
-RUN dnf update -y
-RUN dnf install -y  git cmake gcc-c++ gcc-gfortran mpich-devel zlib-ng-devel openblas-devel hdf5-mpich-devel
+RUN dnf makecache && \
+    dnf update -y &&\
+    dnf install -y  git cmake gcc-c++ gcc-gfortran mpich-devel zlib-ng-devel openblas-devel hdf5-mpich-devel && \
+    dnf install -y python3 python3-pip python3-virtualenv && \
+    dnf clean all
 
-# Setup Python pip
-RUN dnf install -y python3 python3-pip python3-virtualenv
+# Set architecture argument
+ARG ARCH
 
 # Setup MPI
 # RUN source /etc/profile && module load mpi
@@ -18,23 +20,23 @@ RUN dnf install -y python3 python3-pip python3-virtualenv
 # > does not persist the shell state, including environment modifications
 # > such as module load, across RUN commands.
 ENV MPI_BIN=/usr/lib64/mpich/bin
-ENV MPI_SYSCONFIG=/etc/mpich-x86_64
+ENV MPI_SYSCONFIG=/etc/mpich-${ARCH}
 ENV MPI_FORTRAN_MOD_DIR=/usr/lib64/gfortran/modules/mpich
-ENV MPI_INCLUDE=/usr/include/mpich-x86_64
+ENV MPI_INCLUDE=/usr/include/mpich-${ARCH}
 ENV MPI_LIB=/usr/lib64/mpich/lib
-ENV MPI_MAN=/usr/share/man/mpich-x86_64
+ENV MPI_MAN=/usr/share/man/mpich-${ARCH}
 ENV MPI_PYTHON3_SITEARCH=/usr/lib64/python3.13/site-packages/mpich
-ENV MPI_COMPILER=mpich-x86_64
+ENV MPI_COMPILER=mpich-${ARCH}
 ENV MPI_SUFFIX=_mpich
 ENV MPI_HOME=/usr/lib64/mpich
 ENV PATH="/usr/lib64/mpich/bin:$PATH"
 ENV LD_LIBRARY_PATH="/usr/lib64/mpich/lib:$LD_LIBRARY_PATH"
-ENV MANPATH="/usr/share/man/mpich-x86_64:$MANPATH"
+ENV MANPATH="/usr/share/man/mpich-${ARCH}:$MANPATH"
 ENV PKG_CONFIG_PATH="/usr/lib64/mpich/lib/pkgconfig:PKG_CONFIG_PATH"
 
 # Setup FLEXI
-RUN git clone --branch master --single-branch --depth 1 https://github.com/flexi-framework/flexi.git
-WORKDIR "/flexi"
-RUN cmake -B build -DFLEXI_PERFORMANCE=ON -DFLEXI_PERFORMANCE_OPTLIFT=ON
-RUN cmake --build build
+ADD --keep-git-dir=true https://github.com/flexi-framework/flexi.git /flexi
+WORKDIR /flexi
+RUN cmake -B build -DFLEXI_PERFORMANCE=ON -DFLEXI_PERFORMANCE_OPTLIFT=ON && \
+    cmake --build build
 ENV FLEXIDIR=/flexi
