--- a/tutorials/5-02-convtest_flipped/parameter_flip4.ini
+++ b/tutorials/5-02-convtest_flipped/parameter_flip4.ini
@@ -1,7 +1,7 @@
 !================================================================================================================================= !
 ! OUTPUT
 !================================================================================================================================= !
-ProjectName  = 5-02-convtest_flipped                ! Name of output files
+ProjectName  = 5-02-convtest_flipped_flip4          ! Name of output files
 Debugvisu    = F                                    ! Launch the GMSH GUI to visualize the mesh
 OutputFormat = 0                                    ! Mesh output format (HDF5 VTK)
 checkElemJacobians = T                              ! Checks (scaled) Jacobian
@@ -22,10 +22,10 @@ BCIndex      = (/1,2,7,4,5,6/)                      ! Indices of Boundary Condit
 ElemType     = 108                                  ! Element type (108: Hexahedral)
 
 ! === right zone  ===
-! FLIPS 1, 2, 3 between the periodic sides
-Corner       = (/0,-1,1     ,,1,-1,1    ,,1,1,1     ,,0,1,1      ,,0,-1,-1   ,,1,-1,-1  ,,1,1,-1   ,,0,1,-1/)
+! FLIPS 1, 2, 4 between the periodic sides
+Corner       = (/0,1,1     ,,1,1,1     ,,1,1,-1   ,,0,1,-1     ,,0,-1,1    ,,1,-1,1    ,,1,-1,-1  ,,0,-1,-1/)
 nElems       = (/4,8,8/)                            ! Number of elements in each direction
-BCIndex      = (/6,2,3,4,7,1/)                      ! Indices of Boundary Conditions for six Boundary Faces (z-,y-,x+,y+,x-,z+)
+BCIndex      = (/4,6,3,1,7,2/)                      ! Indices of Boundary Conditions for six Boundary Faces (z-,y-,x+,y+,x-,z+)
 ElemType     = 108                                  ! Element type (108: Hexahedral)
 
 !================================================================================================================================= !
