--- a/tutorials/1-09-cartbox_nonconforming/parameter_mortarType2.ini
+++ b/tutorials/1-09-cartbox_nonconforming/parameter_mortarType2.ini
@@ -4,8 +4,7 @@
 ProjectName  = 1-09-cartbox_nonconforming           ! Name of output files
 Debugvisu    = F                                    ! Launch the GMSH GUI to visualize the mesh
 OutputFormat = HDF5                                 ! Mesh output format (HDF5 VTK)
-checkElemJacobians = T                              ! Checks (scaled) Jacobian
-nThreads     = 4                                    ! Number of threads for multiprocessing
+! nThreads     = 4                                    ! Number of threads for multiprocessing
 
 !================================================================================================================================= !
 ! MESH
