--- a/tutorials/2-10-external_mesh_HOPR_cartbox/parameter.ini
+++ b/tutorials/2-10-external_mesh_HOPR_cartbox/parameter.ini
@@ -4,7 +4,7 @@
 ProjectName  = 2-10-external_mesh_HOPR_cartbox      ! Name of output files
 Debugvisu    = F                                    ! Launch the GMSH GUI to visualize the mesh
 OutputFormat = HDF5                                 ! Mesh output format (HDF5 VTK)
-nThreads     = 4                                    ! Number of threads for multiprocessing
+! nThreads     = 4                                    ! Number of threads for multiprocessing
 
 !=============================================================================== !
 ! MESH
