--- a/tutorials/2-12-external_mesh_HOPR_merge/parameter.ini
+++ b/tutorials/2-12-external_mesh_HOPR_merge/parameter.ini
@@ -4,7 +4,7 @@
 ProjectName  = 2-12-external_mesh_HOPR_merge        ! Name of output files
 Debugvisu    = F                                    ! Launch the GMSH GUI to visualize the mesh
 OutputFormat = HDF5                                 ! Mesh output format (HDF5 VTK)
-nThreads     = 0                                    ! Number of threads for multiprocessing
+! nThreads     = 4                                    ! Number of threads for multiprocessing
 
 !=============================================================================== !
 ! MESH
