--- a/tutorials/2-13-external_mesh_HOPR_merge_NGeo/parameter_right.ini
+++ b/tutorials/2-13-external_mesh_HOPR_merge_NGeo/parameter_right.ini
@@ -3,9 +3,8 @@
 !================================================================================================================================= !
 ProjectName  = 2-12-external_mesh_HOPR_right_NGeo   ! Name of output files
 Debugvisu    = F                                    ! Launch the GMSH GUI to visualize the mesh
-OutputFormat = 0                                    ! Mesh output format (HDF5 VTK)
-checkElemJacobians = T                              ! Checks (scaled) Jacobian
-nThreads     = 4                                    ! Number of threads for multiprocessing
+OutputFormat = HDF5                                 ! Mesh output format (HDF5 VTK)
+! nThreads     = 4                                    ! Number of threads for multiprocessing
 
 !================================================================================================================================= !
 ! MESH
