--- a/tutorials/3-01-agglomeration_CGNS_NACA/parameter.ini
+++ b/tutorials/3-01-agglomeration_CGNS_NACA/parameter.ini
@@ -4,7 +4,7 @@
 ProjectName  = 3-01-agglomeration_CGNS_NACA         ! Name of output files
 Debugvisu    = F                                    ! Launch the GMSH GUI to visualize the mesh
 OutputFormat = HDF5                                 ! Mesh output format (HDF5 VTK)
-nThreads     = 4                                    ! Number of threads for multiprocessing
+! nThreads     = 4                                    ! Number of threads for multiprocessing
 
 !=============================================================================== !
 ! MESH
