--- a/tutorials/5-02-convtest_flipped/parameter_flip4.ini
+++ b/tutorials/5-02-convtest_flipped/parameter_flip4.ini
@@ -3,9 +3,8 @@
 !================================================================================================================================= !
 ProjectName  = 5-02-convtest_flipped_flip4          ! Name of output files
 Debugvisu    = F                                    ! Launch the GMSH GUI to visualize the mesh
-OutputFormat = 0                                    ! Mesh output format (HDF5 VTK)
-checkElemJacobians = T                              ! Checks (scaled) Jacobian
-nThreads     = 4                                    ! Number of threads for multiprocessing
+OutputFormat = HDF5                                 ! Mesh output format (HDF5 VTK)
+! nThreads     = 4                                    ! Number of threads for multiprocessing
 
 !================================================================================================================================= !
 ! MESH
